// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component ProgrammesList within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          Course and programme directory
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/studier/?l=en"
          >
            Studies
          </a>
          <h2>
            Course and programme directory
          </h2>
          <ul>
            <li>
              <a
                href="/student/kurser/kurser-inom-program"
              >
                Programme Syllabuses
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/sokkurs"
              >
                Search courses
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/sokkurs-ny-design"
              >
                Search courses (new)
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/org"
              >
                Courses by school
              </a>
            </li>
            <li>
              <a
                href="/student/program/shb"
              >
                Studies before 07/08
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/studier/?l=en"
      >
        Studies
      </a>
      <h2
        id="local-navigation-title"
      >
        Course and programme directory
      </h2>
      <ul>
        <li>
          <a
            href="/student/kurser/kurser-inom-program"
          >
            Programme Syllabuses
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/sokkurs"
          >
            Search courses
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/sokkurs-ny-design"
          >
            Search courses (new)
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/org"
          >
            Courses by school
          </a>
        </li>
        <li>
          <a
            href="/student/program/shb"
          >
            Studies before 07/08
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1>
              Programme Syllabuses
            </h1>
          </header>
          <div
            class="lead"
          >
            <p>
              This is where you will find all programme syllabuses at KTH. Each year group within a programme has its own programme syllabus. The programme syllabus contains, among other things, information about which courses are included in the programme and what applies for selection and admission.
            </p>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            aria-label="Programme-Syllabuses"
            class="form-group"
            name="searchForm"
            role="search"
            style="display: flex; align-items: end;"
          >
            <div>
              <label
                for="pattern"
              >
                Search programme syllabus
              </label>
              <input
                data-testid="pattern"
                id="pattern"
                maxlength="80"
                name="pattern"
                size="50"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article article--no-start-margin "
          >
            <section
              aria-labelledby="heading-TARKU"
              id="progGroupTARKU"
            >
              <h2
                id="heading-TARKU"
              >
                Master of Architecture
              </h2>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/student/kurser/program/ARKIT?l=en"
                  >
                    Degree Programme in Architecture (ARKIT)
                  </a>
                  , 300 hp, admitted/batch from Autumn 07
                </li>
              </ul>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Programmes without new admission (Master of Architecture)
                </summary>
                <div>
                  <ul
                    class="link-list"
                  >
                    <li>
                      <a
                        href="/student/kurser/program/A?l=en"
                      >
                        Degree Programme in Architecture (A)
                      </a>
                      , 270 hp, admitted/batch until Spring 07
                    </li>
                  </ul>
                </div>
              </details>
            </section>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Contact for questions regarding education at KTH: 
              <a
                href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
              >
                Central study counseling
              </a>
              <br />
              Contact regarding technical matters on this page: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Render component ProgrammesList within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          Kurs- och programkatalogen
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/studier/"
          >
            Studier
          </a>
          <h2>
            Kurs- och programkatalogen
          </h2>
          <ul>
            <li>
              <a
                href="/student/kurser/kurser-inom-program"
              >
                Utbildningsplaner
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/sokkurs"
              >
                Sök kurser
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/sokkurs-ny-design"
              >
                Sök kurser (ny)
              </a>
            </li>
            <li>
              <a
                href="/student/kurser/org"
              >
                Kurser per skola
              </a>
            </li>
            <li>
              <a
                href="/student/program/shb"
              >
                Studier före 07/08
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/studier/"
      >
        Studier
      </a>
      <h2
        id="local-navigation-title"
      >
        Kurs- och programkatalogen
      </h2>
      <ul>
        <li>
          <a
            href="/student/kurser/kurser-inom-program"
          >
            Utbildningsplaner
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/sokkurs"
          >
            Sök kurser
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/sokkurs-ny-design"
          >
            Sök kurser (ny)
          </a>
        </li>
        <li>
          <a
            href="/student/kurser/org"
          >
            Kurser per skola
          </a>
        </li>
        <li>
          <a
            href="/student/program/shb"
          >
            Studier före 07/08
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1>
              Utbildningsplaner
            </h1>
          </header>
          <div
            class="lead"
          >
            <p>
              Här hittar du alla utbildningsplaner på KTH. Varje årskull inom ett program har en egen utbildningsplan. I utbildningsplanen finns information om bland annat vilka kurser som ingår i programmet och vad som gäller för urval och behörighet.
            </p>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            aria-label="Programme-Syllabuses"
            class="form-group"
            name="searchForm"
            role="search"
            style="display: flex; align-items: end;"
          >
            <div>
              <label
                for="pattern"
              >
                Sök utbildningsplan
              </label>
              <input
                data-testid="pattern"
                id="pattern"
                maxlength="80"
                name="pattern"
                size="50"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article article--no-start-margin "
          >
            <section
              aria-labelledby="heading-TARKU"
              id="progGroupTARKU"
            >
              <h2
                id="heading-TARKU"
              >
                Arkitektutbildning
              </h2>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/student/kurser/program/ARKIT"
                  >
                    Arkitektutbildning (ARKIT)
                  </a>
                  , 300 hp, antagna/kull fr.o.m. HT07
                </li>
              </ul>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Program utan nyantagning (Arkitektutbildning)
                </summary>
                <div>
                  <ul
                    class="link-list"
                  >
                    <li>
                      <a
                        href="/student/kurser/program/A"
                      >
                        Arkitektutbildning (A)
                      </a>
                      , 270 hp, antagna/kull t.o.m. VT07
                    </li>
                  </ul>
                </div>
              </details>
            </section>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Kontakt för frågor om utbildning på KTH: 
              <a
                href="https://www.kth.se/studievagledning"
              >
                Central studievägledning
              </a>
              <br />
              Teknisk kontakt om denna sida: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
